--- a/src/app/modules/journal-voucher/search-jv-rb/search-jv-rb.component.html
+++ b/src/app/modules/journal-voucher/search-jv-rb/search-jv-rb.component.html
@@ -1,6 +1,6 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Search Journal Voucher</div>
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Search Journal Voucher</div>
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
          style="flex-wrap: wrap" [formGroup]="referbackForm">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
@@ -93,7 +93,7 @@
                 class="fa fa-search"> &nbsp;</i> Find</span></button>
         </div>
     </div>
-    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+    <div class="flex flex-auto mx-12" style="flex-direction: column;overflow-y: scroll">
         <div class="example-table-container">
             <!--[style.height]="gridHeight"-->
             <mat-table
