--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -1,6 +1,6 @@
-<div class=" px-5 py-2 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent container">
-    <div class="text-4xl font-extrabold tracking-tight">Request for Reschedulement of Loan Installment</div>
-    <div class="flex flex-auto" style="flex-direction: row;flex-wrap: wrap;overflow-y: scroll;gap:2%" [formGroup]="RfrlForm">
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Request for Reschedulement of Loan Installment</div>
+    <div class="flex flex-auto mt-4 mx-12" style="flex-direction: row;flex-wrap: wrap;overflow-y: scroll;gap:2%" [formGroup]="RfrlForm">
         
         <div>
 
@@ -119,7 +119,7 @@
         
     </div>
 
-    <div class="mt-2 justify-content-center" >
+    <div class="mt-2 justify-content-center text-right mx-5" >
         <button mat-raised-button color="primary" (click)="find()">Find</button>
     </div>
   
