--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -1,6 +1,6 @@
-<div class=" px-5 py-2 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent container">
-    <div class="text-4xl font-extrabold tracking-tight">Make Reschedule</div>
-    <div class="flex flex-auto" style="flex-direction: row;flex-wrap: wrap;overflow-y: scroll;gap:2%" [formGroup]="mrForm">
+<div class=" sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Make Reschedule</div>
+    <div class="flex flex-auto mx-12" style="flex-direction: row;flex-wrap: wrap;overflow-y: scroll;gap:2%" [formGroup]="mrForm">
         
 
         <div>
