--- a/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
+++ b/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
@@ -1,8 +1,8 @@
-<div>
-    <div class="text-4xl font-extrabold tracking-tight">Advance Search for Reschedule Cases</div>
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Advance Search for Reschedule Cases</div>
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
          style="flex-wrap: wrap" [formGroup]="rcSearch">
         <div
             class="absolute inset-x-0 bottom-0">
@@ -91,7 +91,7 @@
         </div>
 
     </div>
-    <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-scroll mx-12" style="flex-direction: column;">
         <div class="example-table-container">
             <table mat-table
                    [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} "
