--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -1,90 +1,156 @@
 <div>
-    <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
         <div class="text-4xl font-extrabold tracking-tight">NDC Search List</div>
 
         <!-- Header -->
-        <div
-            class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
-            style="flex-wrap: wrap">
-
-            <mat-form-field appearance="outline">
-                <input matInput placeholder="Search" autocomplete="off" appearance="outline" #cnic>
-            </mat-form-field>
-            <button mat-raised-button color="primary" class="btn btn-primary" (click)="findCnic(cnic)">Find</button>
-            <a color="primary">Get All</a>
-
-        </div>
-
-        <div class="mat-table__wrapper mat-elevation-z8" [style.maxHeight]="gridHeight">
-            <mat-table class="lmat-elevation-z8"
-                       [dataSource]="request_data_source">
-                <ng-container matColumnDef="serialNumber">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Sr.</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request">{{request.NDCId}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="customer_cnic">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
-                    </mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="name">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span>
-                    </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="current_status">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Current Status</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Status}}</span></mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="last_status">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Last Action</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.LastStatus}}</span>
-                    </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="next_action_by">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Last Action By</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedBy}}</span>
-                    </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="request_by">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Request By</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Ppno}}</span></mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="request_on">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Request On</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span>
-                    </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="actions">
-                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                    <mat-cell *matCellDef="let request">
-                        <button mat-icon-button color="primary" (click)="downloadFile(request.Cnic,request.NDCId)">
-                            <mat-icon title="download">file_download</mat-icon>
-                        </button>&nbsp;
-                    </mat-cell>
-                </ng-container>
-
-                <mat-header-row *matHeaderRowDef="ndc_requests_displayed_columns;sticky:true;"
-                                class="table-header-background"></mat-header-row>
-
-                <mat-row *matRowDef="let request; columns: ndc_requests_displayed_columns"></mat-row>
-            </mat-table>
-            <div class="mat-table__message" *ngIf="!loading && pending_requests_data_source.data?.length==0">No records
-                found
+        <form [formGroup]="ndcForm" class="kt-form kt-form--group-seperator-dashed">
+            <div class="kt-form">
+              
+                <div class="kt-portlet__body">
+                <!-- <div class="kt-portlet__body-progress">
+                  <mat-spinner [diameter]="20"></mat-spinner>
+                </div>
+                <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
+                  Please enter valid Input
+                </kt-alert> -->
+    
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="form-group kt-form__group row">
+    
+                      <div class="col-lg-2 kt-margin-bottom-20-mobile">
+                                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                                  <mat-label class="customMatLabel">Zone</mat-label>
+                                  <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" disabled="true">
+                                    <mat-option [value]="SelectedZone.ZoneId">
+                                      {{SelectedZone.ZoneName}}
+                                    </mat-option>
+                                  </mat-select>
+                                </mat-form-field>
+                        </div>
+    
+                        <div class="col-lg-2 kt-margin-bottom-20-mobile">
+                            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                              <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                              <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" disabled="true">
+                                <mat-option [value]="SelectedBranch.BranchCode">
+                                  {{SelectedBranch.Name}}
+                                </mat-option>                                
+                              </mat-select>
+                            </mat-form-field>
+                        </div>
+    
+                        <div class="col-lg-2 kt-margin-bottom-20-mobile" *ngIf="!hide">
+                          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                            <mat-label class="customMatLabel">Circle</mat-label>
+                            <mat-select formControlName="CircleId">
+                              <mat-option *ngFor="let circle of SelectedCircle" [value]="circle.Id">
+                                {{circle.CircleCode}}
+                              </mat-option>                                
+                            </mat-select>
+                          </mat-form-field>
+                      </div>
+    
+    
+                      <div class="col-lg-2 kt-margin-bottom-20-mobile">
+                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                          <mat-label class="customMatLabel">Cnic</mat-label>
+                          <input matInput placeholder="Enter Cnic" formControlName="Cnic" appNumberOnly maxlength="13" autocomplete="off" />
+                        </mat-form-field>
+                      </div>
+                      
+                      <div class="col-lg-2 " style="margin-top:5px;">
+                        <button class="btn btn-secondary mt-19  btn-block" (click)="findCnic()" color="primary" type="button"><span><i class="fa fa-search"> &nbsp;</i> Find</span></button>
+                      </div>
+    
+                      <div class="col-lg-2 mt-3">
+                        <span id="llcInquiryText" (click)="loadUsersList()"><b>Get All</b></span>
+                      </div>
+                    </div>
+    
+                  </div>
+                </div>
+    
+              </div>
             </div>
+          </form>
+    
+          <div class="mat-table__wrapper mat-elevation-z8" [style.maxHeight]="gridHeight">
+            <mat-table class="lmat-elevation-z8"
+                       [dataSource]="request_data_source | paginate: {id: 'ndcReq',itemsPerPage: pageSize, currentPage: pageIndex, totalItems: ndcLength}">
+              <ng-container matColumnDef="serialNumber">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Sr #</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request">{{request.NDCId}}</mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="customer_cnic">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
+                </mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="name">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="current_status">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Current Status</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Status}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="last_status">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Last Action</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.LastStatus}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="next_action_by">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Next Action By</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.ApprovalPendingWith}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="request_by">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested By</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Ppno}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="request_on">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested On</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                <mat-cell *matCellDef="let request">
+                  <button mat-icon-button color="primary" (click)="downloadFile(request.Cnic,request.NDCId)">
+                    <mat-icon title="download">file_download</mat-icon>
+                  </button>&nbsp;
+                </mat-cell>
+              </ng-container>
+    
+              <mat-header-row *matHeaderRowDef="ndc_requests_displayed_columns;sticky:true;"
+                              class="table-header-background"></mat-header-row>
+    
+              <mat-row *matRowDef="let request; columns: ndc_requests_displayed_columns"></mat-row>
+            </mat-table>
+            <div class="mat-table__message" *ngIf="!loading && request_data_source.data?.length==0">No records found</div>
             <!-- Message for empty data  -->
             <div class="mat-table__message" *ngIf="loading">Please wait....</div>
-        </div>
-        <div class="mat-table__bottom">
-            <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
-            <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50]"></mat-paginator>
-        </div>
+          </div>
+    
+          <div class="mat-select" style="padding:5px;">
+            <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
+            Items per page:
+            <mat-select display="inline" [(value)]="pageSize" (valueChange)="paginateRequest(1,$event)" style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+              <mat-option [value]="5">5</mat-option>
+              <mat-option [value]="10">10</mat-option>
+              <mat-option [value]="25">25</mat-option>
+              <mat-option [value]="50">50</mat-option>
+            </mat-select>
+            <button (click)="paginateRequest(1)">First</button>
+            <pagination-controls id= "ndcReq" display="inline" (pageChange)="paginateRequest($event)" style="display: inline-block;"></pagination-controls>
+            <button (click)="paginateRequest(Math.ceil(ndcLength/pageSize))">Last</button>
+            <p style="float:right;">Total <b>{{ndcLength}}</b> items</p>
+    
+          </div>
 
 
 
@@ -94,45 +160,52 @@
         <br>
 
 
-
-
-
-
-
-
-
         <div class="mat-table__wrapper mat-elevation-z8" [style.maxHeight]="gridHeight">
             <mat-table class="lmat-elevation-z8"
-                       [dataSource]="pending_requests_data_source">
-                <ng-container matColumnDef="customer_cnic">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
-                    </mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="customer_name">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span></mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="request_on">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Request On</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span></mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="pending_ndc_requests_displayed_columns;sticky:true;"
-                                class="table-header-background"></mat-header-row>
-
-                <mat-row *matRowDef="let request; columns: pending_ndc_requests_displayed_columns"></mat-row>
+                       [dataSource]="pending_requests_data_source | paginate: {id:'pendingReq', itemsPerPage: pageSize, currentPage: pageIndexPending, totalItems: pendingLength}">
+              <ng-container matColumnDef="customer_cnic">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
+                </mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="customer_name">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span></mat-cell>
+              </ng-container>
+    
+              <ng-container matColumnDef="request_on">
+                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested On</mat-header-cell>
+                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span></mat-cell>
+              </ng-container>
+              <mat-header-row *matHeaderRowDef="pending_ndc_requests_displayed_columns;sticky:true;"
+                              class="table-header-background"></mat-header-row>
+    
+              <mat-row *matRowDef="let request; columns: pending_ndc_requests_displayed_columns"></mat-row>
             </mat-table>
             <div class="mat-table__message" *ngIf="!loading && pending_requests_data_source.data?.length==0">No records
-                found
+              found
             </div>
             <!-- Message for empty data  -->
             <div class="mat-table__message" *ngIf="loading">Please wait....</div>
-        </div>
-        <div class="mat-table__bottom">
-            <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
-            <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50]"></mat-paginator>
-        </div>
+    
+          </div>
+    
+          <div class="mat-select" style="padding:5px;">
+            <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
+            Items per page:
+            <mat-select display="inline" [(value)]="pageSize" (valueChange)="paginatePending(1,$event)" style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+              <mat-option [value]="5">5</mat-option>
+              <mat-option [value]="10">10</mat-option>
+              <mat-option [value]="25">25</mat-option>
+              <mat-option [value]="50">50</mat-option>
+            </mat-select>
+            <button (click)="paginatePending(1)">First</button>
+            <pagination-controls id="pendingReq" display="inline" (pageChange)="paginatePending($event)" style="display: inline-block;"></pagination-controls>
+            <button (click)="paginatePending(Math.ceil(pendingLength/pageSize))">Last</button>
+            <p style="float:right;">Total <b>{{pendingLength}}</b> items</p>
+    
+          </div>
+
     </div>
 
 </div>
