Search for Loan Utilization  styling

--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -1,5 +1,5 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Customer Land Information</div>
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Customer Land Information</div>
     <button mat-raised-button color="primary" type="button" class="ml-2" (click)="ViewLandHistory()"
             *ngIf="isFormReadonly">View Land History
     </button>
