--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -8,15 +8,15 @@
     <!-- Navigation header hook -->
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
-        <div class="flex items-center h-20 p-6 pb-0">
+        <div class="flex items-center h-16 p-6" style="background-color: #207937;">
             <!-- Light version -->
             <img
-                class="dark:hidden w-30"
+                class="dark:hidden w-36"
                 src="assets/images/logo/logo-text.svg"
                 alt="Logo image">
             <!-- Dark version -->
             <img
-                class="hidden dark:flex w-30"
+                class="hidden dark:flex w-36"
                 src="assets/images/logo/logo-text-on-dark.svg"
                 alt="Logo image">
         </div>
